--- a/2.6/Dockerfile
+++ b/2.6/Dockerfile
@@ -1,5 +1,5 @@
 FROM ruby:2.6
-MAINTAINER Codeminer42 <contact@codeminer42.com>
+MAINTAINER Dean Perry <dean@deanpcmad.com>
 
 # Add Google Chrome PPA
 RUN curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
@@ -58,6 +58,8 @@ RUN curl -sSLO "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux
     tar -xJf "node-v$NODE_VERSION-linux-x64.tar.xz" -C /usr/local --strip-components=1 && \
     rm -f "node-v$NODE_VERSION-linux-x64.tar.xz" && \
     npm install npm -g
+
+RUN gem update --system
 
 # Encoding
 ENV LANG C.UTF-8
