update rubygems, install bundler and RAILS_ENV

--- a/2.6/Dockerfile
+++ b/2.6/Dockerfile
@@ -59,7 +59,9 @@ RUN curl -sSLO "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux
     rm -f "node-v$NODE_VERSION-linux-x64.tar.xz" && \
     npm install npm -g
 
-RUN gem update --system
+RUN gem update --system && gem install bundler
 
 # Encoding
 ENV LANG C.UTF-8
+
+ENV RAILS_ENV test
